# NovaFeat

./: .gitignore  README.md  pyproject.toml
config/: agent.yaml  app.yaml  cli.yaml  context.yaml  feature_engineering.yaml  logging.yaml  model.yaml  security.yaml  storage.yaml
docs/: architecture.md
src/afe/agent/: config_bundle.py
src/afe/analysis/: profiler.py
src/afe/cli/: main.py
src/afe/config/: loader.py  schemas.py
src/afe/exceptions/: errors.py
src/afe/graph/: build_graph.py
src/afe/graph/nodes/: dataset_analyzer.py  feature_executor.py  feedback_processor.py  human_approval.py  planner.py  summary_generator.py
src/afe/interfaces/: data_access.py  model_provider.py  pii_detector.py  tool.py
src/afe/models/: dataset_metadata.py  messages.py  pii.py  tool_metadata.py
src/afe/security/pii/: aggregator.py  regex_detector.py
src/afe/services/: context_builder.py  data_access_service.py  model_factory.py  transformations.py
src/afe/state/: graph_state.py
tests/: conftest.py  test_config.py  test_data_access_service.py  test_graph.py  test_pii.py  test_profiler.py  test_state.py  test_transformations.py
